Research page changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ assets/img/Personal/Animoji.png
 assets/img/Personal/colors.svg
 navigational-aid - Copy.html
 index - Copy.html
+coeit-research - Copy.html
