--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,23 @@ assets/img/Personal/colors.svg
 navigational-aid - Copy.html
 index - Copy.html
 coeit-research - Copy.html
+assets/img/Personal/Usability Testing.png
+assets/img/Personal/Surveys.png
+assets/img/Personal/Traditional Method.png
+assets/img/Personal/Surveys-3.png
+assets/img/Personal/Surveys-2.png
+assets/img/Personal/Surveys-1.png
+assets/img/Personal/sub.png
+assets/img/Personal/Persona.png
+assets/img/Personal/Interviews.png
+assets/img/Personal/Fly on the wall.png
+assets/img/Personal/ear.png
+assets/img/Personal/dollar.png
+assets/img/Personal/Contextual Inquiry.png
+assets/img/Personal/Artboard 1.png
+assets/img/Personal/A_B.png
+assets/img/Personal/Persona.png
+assets/img/Personal/Interviews.png
+assets/img/Personal/Contextual Inquiry.png
+assets/img/Personal/A_B.png
+assets/img/Personal/Persona.png
