--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ assets/img/Personal/Interviews.png
 assets/img/Personal/Contextual Inquiry.png
 assets/img/Personal/A_B.png
 assets/img/Personal/Persona.png
+coeit-ssc - Copy.html
