Major changes to the site.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ assets/img/Personal/Contextual Inquiry.png
 assets/img/Personal/A_B.png
 assets/img/Personal/Persona.png
 coeit-ssc - Copy.html
+.Rproj.user
